--- a/Tyuiu.ZolotovaKA.Sprint2.Task6.V1/Tyuiu.ZolotovaKA.Sprint2.Task6.V1.csproj
+++ b/Tyuiu.ZolotovaKA.Sprint2.Task6.V1/Tyuiu.ZolotovaKA.Sprint2.Task6.V1.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZolotovaKA.Sprint2.Task6.V1.Lib\Tyuiu.ZolotovaKA.Sprint2.Task6.V1.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
