--- a/Tyuiu.ZolotovaKA.Sprint2.Task7.V6.Test/Tyuiu.ZolotovaKA.Sprint2.Task7.V6.Test.csproj
+++ b/Tyuiu.ZolotovaKA.Sprint2.Task7.V6.Test/Tyuiu.ZolotovaKA.Sprint2.Task7.V6.Test.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZolotovaKA.Sprint2.Task7.V6.Lib\Tyuiu.ZolotovaKA.Sprint2.Task7.V6.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
